[package]
name = "geometry_demo"
version = "0.1.0"
edition = "2021"
default-run = "geometry_demo"

[[bin]]
name = "take_screenshots_and_exit"
path = "src/main_take_screenshots_and_exit.rs"

[dependencies]
bevy = "0.14.2"
# bevy_atmosphere = "0.10.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
voro_rs = "0.3.0"
meshless_voronoi = {git="https://github.com/yuyttenhove/meshless_voro", branch="master", features=["ibig"], default-features = false}
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

